# ammm-project

./: README.md  benchmarks-cplex.sh  benchmarks-heuristic.sh  benchmarks.sh  fine-tune-grasp-batch-job.sh  fine-tune-grasp.sh  generate-instances.sh  plot_presentation.py  pyproject.toml  reference-benchmarks-cplex.sh  tune-grasp-batch-job.sh  tune-grasp.sh  tune.sh
benchmarks/: bigM-bin_packing-100-2.out  bigM-bin_packing-200-2.out  bigM-bin_packing-50-2.out  bigM-knapsack-100-2.out  bigM-knapsack-200-2.out  bigM-knapsack-50-2.out  bigM-mix-100-2.out  bigM-mix-200-2.out  bigM-mix-50-2.out  bigM1-bin_packing-100-2.out  bigM1-bin_packing-200-2.out  bigM1-bin_packing-50-2.out  bigM1-knapsack-100-2.out  bigM1-knapsack-200-2.out  bigM1-knapsack-50-2.out  bigM1-mix-100-2.out  bigM1-mix-200-2.out  bigM1-mix-50-2.out  binary-bin_packing-50-2.out  binary-knapsack-100-2.out  binary-knapsack-200-2.out  binary-knapsack-50-2.out  binary-mix-50-2.out
benchmarks_cplex/: bigM-bin_packing-100-2.out  bigM-bin_packing-200-2.out  bigM-bin_packing-50-2.out  bigM-knapsack-100-2.out  bigM-knapsack-200-2.out  bigM-knapsack-50-2.out  bigM-mix-100-2.out  bigM-mix-200-2.out  bigM-mix-50-2.out  bigM1-bin_packing-100-2.out  bigM1-bin_packing-200-2.out  bigM1-bin_packing-50-2.out  bigM1-knapsack-100-2.out  bigM1-knapsack-200-2.out  bigM1-mix-100-2.out  bigM1-mix-200-2.out  bigM1-mix-50-2.out  bigM2-bin_packing-100-2.out  bigM2-bin_packing-200-2.out  bigM2-bin_packing-50-2.out  bigM2-knapsack-100-2.out  bigM2-knapsack-200-2.out  bigM2-knapsack-50-2.out  bigM2-mix-100-2.out  bigM2-mix-200-2.out  (+5 more)
(+592 files in other folders)
