[project]
name = "ammm-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "volesen", email = "vincolesen@gmail.com" }
]
dependencies = [
    "sortedcontainers>=2.4.0",
    "termcolor>=2.4.0",
    "jupyterlab>=4.1.8",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"ammm-project" = "ammm_project:main"
"generate-instance" = "ammm_project.instance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ammm_project"]
